--- a/getSony.ipynb
+++ b/getSony.ipynb
@@ -5,7 +5,16 @@
    "id": "52df8a57",
    "metadata": {},
    "source": [
-    "## Setting"
+    "## Install"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11fc1c8b",
+   "metadata": {},
+   "source": [
+    "### For Coalab setting\n",
+    "- Coalab에서 사용할 경우 활성화 하세요"
    ]
   },
   {
@@ -15,9 +24,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install selenium\n",
-    "!apt-get update # colab에서는 필요한 경우 시스템 패키지를 업데이트해야 할 수 있습니다.\n",
-    "!apt install chromium-chromedriver"
+    "# !pip install selenium\n",
+    "# !apt-get update # colab에서는 필요한 경우 시스템 패키지를 업데이트해야 할 수 있습니다.\n",
+    "# !apt install chromium-chromedriver\n",
+    "\n",
+    "# !pip install getModelSpec"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e1cbb67",
+   "metadata": {},
+   "source": [
+    "## Import Package"
    ]
   },
   {
@@ -29,14 +48,6 @@
    "source": [
     "import sys\n",
     "sys.path.insert(0,'/usr/lib/chromium-browser/chromedriver') #크롬 드라이버  경로 설정"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6e1cbb67",
-   "metadata": {},
-   "source": [
-    "## Import Package"
    ]
   },
   {
