--- a/getSony.ipynb
+++ b/getSony.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ff24f63",
+   "id": "70b92d40",
    "metadata": {},
    "source": [
     "### For Coalab setting\n",
@@ -28,7 +28,10 @@
     "# !apt-get update # colab에서는 필요한 경우 시스템 패키지를 업데이트해야 할 수 있습니다.\n",
     "# !apt install chromium-chromedriver\n",
     "\n",
-    "# !pip install getModelSpec"
+    "# !pip install getModelSpec\n",
+    "\n",
+    "# import os\n",
+    "# os.kill(os.getpid(), 9)"
    ]
   },
   {
