--- a/getSony.ipynb
+++ b/getSony.ipynb
@@ -5,7 +5,7 @@
    "id": "52df8a57",
    "metadata": {},
    "source": [
-    "## Install"
+    "## 1. Setting"
    ]
   },
   {
@@ -13,8 +13,80 @@
    "id": "70b92d40",
    "metadata": {},
    "source": [
-    "### For Coalab setting\n",
+    "-  For Coalab setting\n",
     "- Coalab에서 사용할 경우 활성화 하세요"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30216803",
+   "metadata": {},
+   "source": [
+    "### 1-1) Install Colab selenium & crome driver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9142d357",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # 이 부분은 처음 한번만 실행.\n",
+    "\n",
+    "# %%shell\n",
+    "# # Ubuntu no longer distributes chromium-browser outside of snap\n",
+    "# #\n",
+    "# # Proposed solution: https://askubuntu.com/questions/1204571/how-to-install-chromium-without-snap\n",
+    "\n",
+    "# # Add debian buster\n",
+    "# cat > /etc/apt/sources.list.d/debian.list <<'EOF'\n",
+    "# deb [arch=amd64 signed-by=/usr/share/keyrings/debian-buster.gpg] http://deb.debian.org/debian buster main\n",
+    "# deb [arch=amd64 signed-by=/usr/share/keyrings/debian-buster-updates.gpg] http://deb.debian.org/debian buster-updates main\n",
+    "# deb [arch=amd64 signed-by=/usr/share/keyrings/debian-security-buster.gpg] http://deb.debian.org/debian-security buster/updates main\n",
+    "# EOF\n",
+    "\n",
+    "# # Add keys\n",
+    "# apt-key adv --keyserver keyserver.ubuntu.com --recv-keys DCC9EFBF77E11517\n",
+    "# apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 648ACFD622F3D138\n",
+    "# apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 112695A0E562B32A\n",
+    "\n",
+    "# apt-key export 77E11517 | gpg --dearmour -o /usr/share/keyrings/debian-buster.gpg\n",
+    "# apt-key export 22F3D138 | gpg --dearmour -o /usr/share/keyrings/debian-buster-updates.gpg\n",
+    "# apt-key export E562B32A | gpg --dearmour -o /usr/share/keyrings/debian-security-buster.gpg\n",
+    "\n",
+    "# # Prefer debian repo for chromium* packages only\n",
+    "# # Note the double-blank lines between entries\n",
+    "# cat > /etc/apt/preferences.d/chromium.pref << 'EOF'\n",
+    "# Package: *\n",
+    "# Pin: release a=eoan\n",
+    "# Pin-Priority: 500\n",
+    "\n",
+    "\n",
+    "# Package: *\n",
+    "# Pin: origin \"deb.debian.org\"\n",
+    "# Pin-Priority: 300\n",
+    "\n",
+    "\n",
+    "# Package: chromium*\n",
+    "# Pin: origin \"deb.debian.org\"\n",
+    "# Pin-Priority: 700\n",
+    "# EOF\n",
+    "\n",
+    "# # Install chromium and chromium-driver\n",
+    "# apt-get update\n",
+    "# apt-get install chromium chromium-driver\n",
+    "\n",
+    "# # Install selenium\n",
+    "# pip install selenium"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a21fafa2",
+   "metadata": {},
+   "source": [
+    "### 1-2) Install Package"
    ]
   },
   {
@@ -24,11 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install selenium\n",
-    "# !apt-get update # colab에서는 필요한 경우 시스템 패키지를 업데이트해야 할 수 있습니다.\n",
-    "# !apt install chromium-chromedriver\n",
-    "\n",
-    "# !pip install getModelSpec\n",
+    "# pip install getModelSpec\n",
     "\n",
     "# import os\n",
     "# os.kill(os.getpid(), 9)"
@@ -39,7 +107,7 @@
    "id": "6e1cbb67",
    "metadata": {},
    "source": [
-    "## Import Package"
+    "## 2.  Import Package"
    ]
   },
   {
@@ -62,6 +130,14 @@
    "source": [
     "from datetime import date\n",
     "from src import GetSONY"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0429c013",
+   "metadata": {},
+   "source": [
+    "## 3. Act"
    ]
   },
   {
