--- a/getting_starting.ipynb
+++ b/getting_starting.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "-  For Coalab setting\n",
-    "- Coalab에서 사용할 경우 활성화 하세요"
+    "- Coalab에서 사용할 경우 활성화 하세요 (주석 처리 제거, ctrl+/)"
    ]
   },
   {
@@ -96,10 +96,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pip install getModelSpec\n",
+    "# !pip install getmodelspec\n",
     "\n",
     "# import os\n",
     "# os.kill(os.getpid(), 9)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86dcd580",
+   "metadata": {},
+   "source": [
+    "- `os.kill(os.getpid(), 9)`은 런타임 재시작 입니다. 아래부터 이어서 진행하면 됩니다."
    ]
   },
   {
@@ -112,24 +120,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4ac45040",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "sys.path.insert(0,'/usr/lib/chromium-browser/chromedriver') #크롬 드라이버  경로 설정"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "id": "8e611f88",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "\n",
     "from datetime import date\n",
-    "from src import GetSONY"
+    "from getmodelspec import GetSONY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ac45040",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys.path.insert(0,'/usr/lib/chromium-browser/chromedriver') #크롬 드라이버  경로 설정"
    ]
   },
   {
@@ -158,12 +167,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fileName=f\"sony_TV_series_{date.today().strftime(\"%Y-%m-%d\")}.xlsx\"\n",
-    "# 엑셀 파일로 저장\n",
-    "df_models.to_excel(fileName, index=False)\n",
-    "\n",
-    "# 파일 다운로드\n",
-    "files.download(fileName)"
+    "fileName=f\"sony_TV_series_{date.today().strftime('%Y-%m-%d')}.xlsx\"\n",
+    "df_models.to_excel(fileName, index=False) # 엑셀 파일로 저장"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62e82f02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from google.colab import files\n",
+    "# files.download(fileName) # 파일 다운로드"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f84d923e",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   }
  ],
