--- a/get_start.ipynb
+++ b/get_start.ipynb
@@ -3,15 +3,19 @@
   {
    "cell_type": "markdown",
    "id": "52df8a57",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "## 1. Setting"
+    "## Setting"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "70b92d40",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "-  For Coalab setting\n",
     "- Coalab에서 사용할 경우 활성화 하세요 (주석 처리 제거, ctrl+/)"
@@ -20,92 +24,113 @@
   {
    "cell_type": "markdown",
    "id": "30216803",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
-    "### 1-1) Install Colab selenium & crome driver"
+    "### Install Colab selenium & crome driver"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9142d357",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2094957662.py, line 9)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\taest\\AppData\\Local\\Temp\\ipykernel_35220\\2094957662.py\"\u001b[1;36m, line \u001b[1;32m9\u001b[0m\n\u001b[1;33m    cat > /etc/apt/sources.list.d/debian.list <<'EOF'\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "# # 이 부분은 처음 한번만 실행.\n",
+    "# 이 부분은 처음 한번만 실행.\n",
     "\n",
-    "# %%shell\n",
-    "# # Ubuntu no longer distributes chromium-browser outside of snap\n",
-    "# #\n",
-    "# # Proposed solution: https://askubuntu.com/questions/1204571/how-to-install-chromium-without-snap\n",
+    "%%shell\n",
+    "# Ubuntu no longer distributes chromium-browser outside of snap\n",
+    "#\n",
+    "# Proposed solution: https://askubuntu.com/questions/1204571/how-to-install-chromium-without-snap\n",
     "\n",
-    "# # Add debian buster\n",
-    "# cat > /etc/apt/sources.list.d/debian.list <<'EOF'\n",
-    "# deb [arch=amd64 signed-by=/usr/share/keyrings/debian-buster.gpg] http://deb.debian.org/debian buster main\n",
-    "# deb [arch=amd64 signed-by=/usr/share/keyrings/debian-buster-updates.gpg] http://deb.debian.org/debian buster-updates main\n",
-    "# deb [arch=amd64 signed-by=/usr/share/keyrings/debian-security-buster.gpg] http://deb.debian.org/debian-security buster/updates main\n",
-    "# EOF\n",
+    "# Add debian buster\n",
+    "cat > /etc/apt/sources.list.d/debian.list <<'EOF'\n",
+    "deb [arch=amd64 signed-by=/usr/share/keyrings/debian-buster.gpg] http://deb.debian.org/debian buster main\n",
+    "deb [arch=amd64 signed-by=/usr/share/keyrings/debian-buster-updates.gpg] http://deb.debian.org/debian buster-updates main\n",
+    "deb [arch=amd64 signed-by=/usr/share/keyrings/debian-security-buster.gpg] http://deb.debian.org/debian-security buster/updates main\n",
+    "EOF\n",
     "\n",
-    "# # Add keys\n",
-    "# apt-key adv --keyserver keyserver.ubuntu.com --recv-keys DCC9EFBF77E11517\n",
-    "# apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 648ACFD622F3D138\n",
-    "# apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 112695A0E562B32A\n",
+    "# Add keys\n",
+    "apt-key adv --keyserver keyserver.ubuntu.com --recv-keys DCC9EFBF77E11517\n",
+    "apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 648ACFD622F3D138\n",
+    "apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 112695A0E562B32A\n",
     "\n",
-    "# apt-key export 77E11517 | gpg --dearmour -o /usr/share/keyrings/debian-buster.gpg\n",
-    "# apt-key export 22F3D138 | gpg --dearmour -o /usr/share/keyrings/debian-buster-updates.gpg\n",
-    "# apt-key export E562B32A | gpg --dearmour -o /usr/share/keyrings/debian-security-buster.gpg\n",
+    "apt-key export 77E11517 | gpg --dearmour -o /usr/share/keyrings/debian-buster.gpg\n",
+    "apt-key export 22F3D138 | gpg --dearmour -o /usr/share/keyrings/debian-buster-updates.gpg\n",
+    "apt-key export E562B32A | gpg --dearmour -o /usr/share/keyrings/debian-security-buster.gpg\n",
     "\n",
-    "# # Prefer debian repo for chromium* packages only\n",
-    "# # Note the double-blank lines between entries\n",
-    "# cat > /etc/apt/preferences.d/chromium.pref << 'EOF'\n",
-    "# Package: *\n",
-    "# Pin: release a=eoan\n",
-    "# Pin-Priority: 500\n",
-    "\n",
-    "\n",
-    "# Package: *\n",
-    "# Pin: origin \"deb.debian.org\"\n",
-    "# Pin-Priority: 300\n",
+    "# Prefer debian repo for chromium* packages only\n",
+    "# Note the double-blank lines between entries\n",
+    "cat > /etc/apt/preferences.d/chromium.pref << 'EOF'\n",
+    "Package: *\n",
+    "Pin: release a=eoan\n",
+    "Pin-Priority: 500\n",
     "\n",
     "\n",
-    "# Package: chromium*\n",
-    "# Pin: origin \"deb.debian.org\"\n",
-    "# Pin-Priority: 700\n",
-    "# EOF\n",
+    "Package: *\n",
+    "Pin: origin \"deb.debian.org\"\n",
+    "Pin-Priority: 300\n",
     "\n",
-    "# # Install chromium and chromium-driver\n",
-    "# apt-get update\n",
-    "# apt-get install chromium chromium-driver\n",
     "\n",
-    "# # Install selenium\n",
-    "# pip install selenium"
+    "Package: chromium*\n",
+    "Pin: origin \"deb.debian.org\"\n",
+    "Pin-Priority: 700\n",
+    "EOF\n",
+    "\n",
+    "# Install chromium and chromium-driver\n",
+    "apt-get update\n",
+    "apt-get install chromium chromium-driver\n",
+    "\n",
+    "# Install selenium\n",
+    "pip install selenium"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "a21fafa2",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
-    "### 1-2) Install Package"
+    "### Install Package"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "9e1b74f7",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
-    "# !pip install getmodelspec\n",
+    "!pip install getmodelspec\n",
     "\n",
-    "# import os\n",
-    "# os.kill(os.getpid(), 9)"
+    "import os\n",
+    "os.kill(os.getpid(), 9)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "86dcd580",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- `os.kill(os.getpid(), 9)`은 런타임 재시작 입니다. 아래부터 이어서 진행하면 됩니다."
    ]
@@ -113,16 +138,20 @@
   {
    "cell_type": "markdown",
    "id": "6e1cbb67",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "## 2.  Import Package"
+    "## Import Package"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "id": "8e611f88",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "import sys\n",
@@ -135,7 +164,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4ac45040",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "sys.path.insert(0,'/usr/lib/chromium-browser/chromedriver') #크롬 드라이버  경로 설정"
@@ -144,16 +175,20 @@
   {
    "cell_type": "markdown",
    "id": "0429c013",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "## 3. Act"
+    "## Act"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "id": "991f097d",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "sony = GetSONY()\n",
@@ -164,7 +199,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "203689d9",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "fileName=f\"sony_TV_series_{date.today().strftime('%Y-%m-%d')}.xlsx\"\n",
@@ -175,17 +212,21 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "62e82f02",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
-    "# from google.colab import files\n",
-    "# files.download(fileName) # 파일 다운로드"
+    "from google.colab import files\n",
+    "files.download(fileName) # 파일 다운로드"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "f84d923e",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "---"
    ]
@@ -208,6 +249,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.16"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
