--- a/get_start.ipynb
+++ b/get_start.ipynb
@@ -34,21 +34,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9142d357",
    "metadata": {
     "hidden": true
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2094957662.py, line 9)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\taest\\AppData\\Local\\Temp\\ipykernel_35220\\2094957662.py\"\u001b[1;36m, line \u001b[1;32m9\u001b[0m\n\u001b[1;33m    cat > /etc/apt/sources.list.d/debian.list <<'EOF'\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 이 부분은 처음 한번만 실행.\n",
     "\n",
@@ -206,6 +197,16 @@
    "source": [
     "fileName=f\"sony_TV_series_{date.today().strftime('%Y-%m-%d')}.xlsx\"\n",
     "df_models.to_excel(fileName, index=False) # 엑셀 파일로 저장"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cd68dd3",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "- colab에서 파일 받기"
    ]
   },
   {
