--- a/get_start.ipynb
+++ b/get_start.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "markdown",
    "id": "52df8a57",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Setting"
    ]
@@ -13,9 +11,7 @@
   {
    "cell_type": "markdown",
    "id": "70b92d40",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "-  For Coalab setting\n",
     "- Coalab에서 사용할 경우 활성화 하세요 (주석 처리 제거, ctrl+/)"
@@ -25,8 +21,7 @@
    "cell_type": "markdown",
    "id": "30216803",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### Install Colab selenium & crome driver"
@@ -42,6 +37,7 @@
    "outputs": [],
    "source": [
     "# 이 부분은 처음 한번만 실행.\n",
+    "#colab 환경이 아니라면 비활성화\n",
     "\n",
     "%%shell\n",
     "# Ubuntu no longer distributes chromium-browser outside of snap\n",
@@ -94,8 +90,7 @@
    "cell_type": "markdown",
    "id": "a21fafa2",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### Install Package"
@@ -110,7 +105,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install getmodelspec\n",
+    "!pip install getmodelspec -U\n",
     "\n",
     "import os\n",
     "os.kill(os.getpid(), 9)"
@@ -166,9 +161,7 @@
   {
    "cell_type": "markdown",
    "id": "0429c013",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Act"
    ]
@@ -177,12 +170,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "991f097d",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "sony = GetSONY()\n",
+    "sony = GetSONY(env=\"colab\") #colab 환경이 아니라면 sony = GetSONY() 으로 변경\n",
     "df_models=sony.getModels()"
    ]
   },
@@ -190,9 +181,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "203689d9",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fileName=f\"sony_TV_series_{date.today().strftime('%Y-%m-%d')}.xlsx\"\n",
@@ -202,9 +191,7 @@
   {
    "cell_type": "markdown",
    "id": "1cd68dd3",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "- colab에서 파일 받기"
    ]
@@ -213,11 +200,10 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "62e82f02",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "#colab 환경이 아니라면 비활성화\n",
     "from google.colab import files\n",
     "files.download(fileName) # 파일 다운로드"
    ]
@@ -225,9 +211,7 @@
   {
    "cell_type": "markdown",
    "id": "f84d923e",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "---"
    ]
