--- a/get_start.ipynb
+++ b/get_start.ipynb
@@ -173,7 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sony = GetSONY(env=\"colab\") #colab 환경이 아니라면 sony = GetSONY() 으로 변경\n",
+    "sony = GetSONY(envr=\"colab\") #colab 환경이 아니라면 sony = GetSONY() 으로 변경\n",
     "df_models=sony.getModels()"
    ]
   },
@@ -184,7 +184,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fileName=f\"sony_TV_series_{date.today().strftime('%Y-%m-%d')}.xlsx\"\n",
+    "stamp = date.today().strftime('%Y-%m-%d')\n",
+    "\n",
+    "fileName=f\"sony_TV_series_{stamp}.xlsx\"\n",
     "df_models.to_excel(fileName, index=False) # 엑셀 파일로 저장"
    ]
   },
