--- a/get_start.ipynb
+++ b/get_start.ipynb
@@ -173,21 +173,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sony = GetSONY(envr=\"colab\") #colab 환경이 아니라면 sony = GetSONY() 으로 변경\n",
+    "sony = GetSONY(envr=\"weak\") #colab 환경이 아니라면 sony = GetSONY() 으로 변경\n",
     "df_models=sony.getModels()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "203689d9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stamp = date.today().strftime('%Y-%m-%d')\n",
-    "\n",
-    "fileName=f\"sony_TV_series_{stamp}.xlsx\"\n",
-    "df_models.to_excel(fileName, index=False) # 엑셀 파일로 저장"
    ]
   },
   {
