--- a/get_start.ipynb
+++ b/get_start.ipynb
@@ -194,6 +194,7 @@
    "source": [
     "#colab 환경이 아니라면 비활성화\n",
     "from google.colab import files\n",
+    "fileName = f\"sony_TV_series_{date.today().strftime('%Y-%m-%d')}.xlsx\"\n",
     "files.download(fileName) # 파일 다운로드"
    ]
   },
