--- a/get_start.ipynb
+++ b/get_start.ipynb
@@ -2,16 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "52df8a57",
+   "id": "1f063cfb",
    "metadata": {},
    "source": [
-    "## Setting"
+    "# QuickGuide For SONY\n",
+    "\n",
+    "[프로젝트 페이지: Research-on-the-TV-market](https://github.com/xikest/Research-on-the-TV-market)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52df8a57",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "## Env setting"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "70b92d40",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "-  For Coalab setting\n",
     "- Coalab에서 사용할 경우 활성화 하세요 (주석 처리 제거, ctrl+/)"
@@ -21,7 +35,8 @@
    "cell_type": "markdown",
    "id": "30216803",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Install Colab selenium & crome driver"
@@ -90,7 +105,8 @@
    "cell_type": "markdown",
    "id": "a21fafa2",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Install Package"
@@ -128,7 +144,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "## Import Package"
+    "## Package setting"
    ]
   },
   {
@@ -173,8 +189,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sony = GetSONY(envr=\"weak\") #colab 환경이 아니라면 sony = GetSONY() 으로 변경\n",
-    "df_models=sony.getModels()"
+    "sonyScraper = GetSONY(envr=\"weak\") #colab 환경이 아니라면 sonyScraper = GetSONY() 으로 변경\n",
+    "dfModels = sonyScraper.getModels()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1afcf53c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfModels.info()\n",
+    "dfModels.head(3)"
    ]
   },
   {
