--- a/quick_guide_specifications.ipynb
+++ b/quick_guide_specifications.ipynb
@@ -20,15 +20,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70b92d40",
-   "metadata": {},
-   "source": [
-    "-  For Coalab setting\n",
-    "- Coalab에서 사용할 경우 활성화 하세요 (주석 처리 제거, ctrl+/)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "a21fafa2",
    "metadata": {},
    "source": [
@@ -37,13 +28,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9e1b74f7",
    "metadata": {},
    "outputs": [],
    "source": [
     "!pip install getmodelspec -U\n",
-    "!pip install bs4\n",
+    "!pip install bs4, selenium\n",
     "\n",
     "import os\n",
     "os.kill(os.getpid(), 9)"
@@ -62,7 +53,7 @@
    "id": "6e1cbb67",
    "metadata": {},
    "source": [
-    "## Package setting"
+    "### Package setting"
    ]
   },
   {
@@ -95,14 +86,14 @@
     "specs = GetSepcifications()\n",
     "\n",
     "sonyUrl = \"https://www.displayspecifications.com/en/brand/47e6f\"\n",
-    "dict_a = specs.getSepc(sonyUrl)\n",
-    "print(dict_a)\n",
+    "dictModelSepcs = specs.getSepc(sonyUrl)\n",
     "\n",
-    "dfModels = pd.DataFrame.from_dict(dict_a, orient=\"index\")\n",
-    "dfModels = dfModels.rename_axis('model').reset_index()\n",
+    "\n",
+    "dfModelSepcs = pd.DataFrame.from_dict(dictModelSepcs, orient=\"index\")\n",
+    "dfModelSepcs = dfModelSepcs.rename_axis('model').reset_index()\n",
     "\n",
     "fileName=f\"TV_series_{date.today().strftime('%Y-%m-%d')}.xlsx\"\n",
-    "dfModels.to_excel(fileName, index=False)# 엑셀 파일로 저장"
+    "dfModelSepcs.to_excel(fileName, index=False)# 엑셀 파일로 저장"
    ]
   },
   {
