--- a/quick_guide_lineup.ipynb
+++ b/quick_guide_lineup.ipynb
@@ -13,9 +13,7 @@
   {
    "cell_type": "markdown",
    "id": "52df8a57",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Env setting"
    ]
@@ -23,9 +21,7 @@
   {
    "cell_type": "markdown",
    "id": "70b92d40",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "-  For Coalab setting\n",
     "- Coalab에서 사용할 경우 활성화 하세요 (주석 처리 제거, ctrl+/)"
@@ -35,8 +31,7 @@
    "cell_type": "markdown",
    "id": "30216803",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### Install Colab selenium & crome driver"
@@ -104,10 +99,7 @@
   {
    "cell_type": "markdown",
    "id": "a21fafa2",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Install Package"
    ]
@@ -116,11 +108,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9e1b74f7",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install webdriver-manager\n",
+    "!pip install bs4\n",
+    "!pip install selenium -U\n",
     "!pip install getmodelspec -U\n",
     "\n",
     "import os\n",
@@ -130,9 +123,7 @@
   {
    "cell_type": "markdown",
    "id": "86dcd580",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "- `os.kill(os.getpid(), 9)`은 런타임 재시작 입니다. 아래부터 이어서 진행하면 됩니다."
    ]
