--- a/quick_guide_score.ipynb
+++ b/quick_guide_score.ipynb
@@ -33,8 +33,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install webdriver-manager\n",
+    "!pip install bs4\n",
+    "!pip install selenium -U\n",
     "!pip install getmodelspec -U\n",
-    "!pip install bs4, selenium\n",
     "\n",
     "import os\n",
     "os.kill(os.getpid(), 9)"
@@ -65,7 +67,7 @@
    "source": [
     "import pandas as pd\n",
     "from datetime import date\n",
-    "from getmodelspec import GetSepcifications"
+    "from getmodelspec import Score"
    ]
   },
   {
@@ -83,19 +85,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "score = GetScore()\n",
+    "score = Score()\n",
     "\n",
     "prefix = \"https://www.rtings.com/tv/reviews/sony/\",\n",
-    "model = \"x85k\"\n",
+    "series = \"x85k\"\n",
     "\n",
-    "\n",
-    "dictModelScore = score.getRthinsScore(prefix,model)\n",
-    "\n",
-    "\n",
-    "dfModelScore = pd.DataFrame.from_dict(dictModelScore, orient=\"index\")\n",
+    "dictModelScore = score.getRthinsScore(prefix=prefix, series=series)\n",
+    "dfModelScore = pd.DataFrame.from_dict(dictModelScore, orient=\"index\", columns=[\"score\"])\n",
     "dfModelScore = dfModelScore.rename_axis('model').reset_index()\n",
     "\n",
-    "fileName=f\"TV_series_{date.today().strftime('%Y-%m-%d')}.xlsx\"\n",
+    "fileName=f\"{series}_score_{date.today().strftime('%Y-%m-%d')}.xlsx\"\n",
     "dfModelScore.to_excel(fileName, index=False)# 엑셀 파일로 저장"
    ]
   },
@@ -116,7 +115,6 @@
    "source": [
     "#colab 환경이 아니라면 비활성화\n",
     "from google.colab import files\n",
-    "fileName = f\"sony_TV_series_{date.today().strftime('%Y-%m-%d')}.xlsx\"\n",
     "files.download(fileName) # 파일 다운로드"
    ]
   },
