--- a/quick_guide_specifications.ipynb
+++ b/quick_guide_specifications.ipynb
@@ -33,8 +33,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install webdriver-manager\n",
+    "!pip install bs4\n",
+    "!pip install selenium -U\n",
     "!pip install getmodelspec -U\n",
-    "!pip install bs4, selenium\n",
     "\n",
     "import os\n",
     "os.kill(os.getpid(), 9)"
@@ -65,7 +67,7 @@
    "source": [
     "import pandas as pd\n",
     "from datetime import date\n",
-    "from getmodelspec import GetSepcifications"
+    "from getmodelspec import Sepcifications"
    ]
   },
   {
@@ -83,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "specs = GetSepcifications()\n",
+    "specs = Sepcifications()\n",
     "\n",
     "sonyUrl = \"https://www.displayspecifications.com/en/brand/47e6f\"\n",
     "dictModelSepcs = specs.getSepc(sonyUrl)\n",
@@ -92,7 +94,7 @@
     "dfModelSepcs = pd.DataFrame.from_dict(dictModelSepcs, orient=\"index\")\n",
     "dfModelSepcs = dfModelSepcs.rename_axis('model').reset_index()\n",
     "\n",
-    "fileName=f\"TV_series_{date.today().strftime('%Y-%m-%d')}.xlsx\"\n",
+    "fileName=f\"SONY_series_{date.today().strftime('%Y-%m-%d')}.xlsx\"\n",
     "dfModelSepcs.to_excel(fileName, index=False)# 엑셀 파일로 저장"
    ]
   },
@@ -113,7 +115,6 @@
    "source": [
     "#colab 환경이 아니라면 비활성화\n",
     "from google.colab import files\n",
-    "fileName = f\"sony_TV_series_{date.today().strftime('%Y-%m-%d')}.xlsx\"\n",
     "files.download(fileName) # 파일 다운로드"
    ]
   },
