--- a/quick_guide_lineup.ipynb
+++ b/quick_guide_lineup.ipynb
@@ -111,13 +111,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install webdriver-manager\n",
-    "!pip install bs4\n",
-    "!pip install selenium -U\n",
     "!pip install getmodelspec -U\n",
-    "\n",
-    "import os\n",
-    "os.kill(os.getpid(), 9)"
+    "getmodelspec.WebDriver.installChromiumSeleniumBs4()"
    ]
   },
   {
