--- a/quick_guide_lineup.ipynb
+++ b/quick_guide_lineup.ipynb
@@ -112,7 +112,8 @@
    "outputs": [],
    "source": [
     "!pip install getmodelspec -U\n",
-    "getmodelspec.WebDriver.installChromiumSeleniumBs4()"
+    "from getmodelspec import WebDriver\n",
+    "WebDriver.installChromiumSeleniumBs4()"
    ]
   },
   {
