--- a/quick_guide_score.ipynb
+++ b/quick_guide_score.ipynb
@@ -34,7 +34,8 @@
    "outputs": [],
    "source": [
     "!pip install getmodelspec -U\n",
-    "getmodelspec.WebDriver.installChromiumSeleniumBs4()"
+    "from getmodelspec import WebDriver\n",
+    "WebDriver.installChromiumSeleniumBs4()"
    ]
   },
   {
