--- a/quick_guide_lineup.ipynb
+++ b/quick_guide_lineup.ipynb
@@ -112,8 +112,8 @@
    "outputs": [],
    "source": [
     "!pip install getmodelspec -U\n",
-    "from getmodelspec import WebDriver\n",
-    "WebDriver.installChromiumSeleniumBs4()"
+    "from getmodelspec import Wdriver\n",
+    "Wdriver.installChromiumSeleniumBs4()"
    ]
   },
   {
