--- a/quick_guide_specifications.ipynb
+++ b/quick_guide_specifications.ipynb
@@ -34,8 +34,8 @@
    "outputs": [],
    "source": [
     "!pip install getmodelspec -U\n",
-    "from getmodelspec import WebDriver\n",
-    "WebDriver.installChromiumSeleniumBs4()"
+    "from getmodelspec import Wdriver\n",
+    "Wdriver.installChromiumSeleniumBs4()"
    ]
   },
   {
