--- a/quick_guide_lineup.ipynb
+++ b/quick_guide_lineup.ipynb
@@ -30,9 +30,7 @@
   {
    "cell_type": "markdown",
    "id": "30216803",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Install Colab selenium & crome driver"
    ]
@@ -41,9 +39,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "9142d357",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 이 부분은 처음 한번만 실행.\n",
@@ -93,7 +89,13 @@
     "apt-get install chromium chromium-driver\n",
     "\n",
     "# Install selenium\n",
-    "pip install selenium"
+    "pip install selenium\n",
+    "\n",
+    "# Install bs4\n",
+    "pip install bs4\n",
+    "\n",
+    "# install getmodelspec\n",
+    "pip install getmodelspec -U"
    ]
   },
   {
@@ -111,9 +113,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install getmodelspec -U\n",
-    "from getmodelspec import Wdriver\n",
-    "Wdriver.installChromiumSeleniumBs4()"
+    "import os\n",
+    "os.kill(os.getpid(), 9)"
    ]
   },
   {
@@ -127,9 +128,7 @@
   {
    "cell_type": "markdown",
    "id": "6e1cbb67",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Package setting"
    ]
@@ -138,9 +137,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "8e611f88",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
@@ -153,9 +150,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4ac45040",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sys.path.insert(0,'/usr/lib/chromium-browser/chromedriver') #크롬 드라이버  경로 설정"
