--- a/quick_guide_score.ipynb
+++ b/quick_guide_score.ipynb
@@ -33,9 +33,60 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install getmodelspec -U\n",
-    "from getmodelspec import Wdriver\n",
-    "Wdriver.installChromiumSeleniumBs4()"
+    "# 이 부분은 처음 한번만 실행.\n",
+    "#colab 환경이 아니라면 비활성화\n",
+    "\n",
+    "%%shell\n",
+    "# Ubuntu no longer distributes chromium-browser outside of snap\n",
+    "#\n",
+    "# Proposed solution: https://askubuntu.com/questions/1204571/how-to-install-chromium-without-snap\n",
+    "\n",
+    "# Add debian buster\n",
+    "cat > /etc/apt/sources.list.d/debian.list <<'EOF'\n",
+    "deb [arch=amd64 signed-by=/usr/share/keyrings/debian-buster.gpg] http://deb.debian.org/debian buster main\n",
+    "deb [arch=amd64 signed-by=/usr/share/keyrings/debian-buster-updates.gpg] http://deb.debian.org/debian buster-updates main\n",
+    "deb [arch=amd64 signed-by=/usr/share/keyrings/debian-security-buster.gpg] http://deb.debian.org/debian-security buster/updates main\n",
+    "EOF\n",
+    "\n",
+    "# Add keys\n",
+    "apt-key adv --keyserver keyserver.ubuntu.com --recv-keys DCC9EFBF77E11517\n",
+    "apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 648ACFD622F3D138\n",
+    "apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 112695A0E562B32A\n",
+    "\n",
+    "apt-key export 77E11517 | gpg --dearmour -o /usr/share/keyrings/debian-buster.gpg\n",
+    "apt-key export 22F3D138 | gpg --dearmour -o /usr/share/keyrings/debian-buster-updates.gpg\n",
+    "apt-key export E562B32A | gpg --dearmour -o /usr/share/keyrings/debian-security-buster.gpg\n",
+    "\n",
+    "# Prefer debian repo for chromium* packages only\n",
+    "# Note the double-blank lines between entries\n",
+    "cat > /etc/apt/preferences.d/chromium.pref << 'EOF'\n",
+    "Package: *\n",
+    "Pin: release a=eoan\n",
+    "Pin-Priority: 500\n",
+    "\n",
+    "\n",
+    "Package: *\n",
+    "Pin: origin \"deb.debian.org\"\n",
+    "Pin-Priority: 300\n",
+    "\n",
+    "\n",
+    "Package: chromium*\n",
+    "Pin: origin \"deb.debian.org\"\n",
+    "Pin-Priority: 700\n",
+    "EOF\n",
+    "\n",
+    "# Install chromium and chromium-driver\n",
+    "apt-get update\n",
+    "apt-get install chromium chromium-driver\n",
+    "\n",
+    "# Install selenium\n",
+    "pip install selenium\n",
+    "\n",
+    "# Install bs4\n",
+    "pip install bs4\n",
+    "\n",
+    "# install getmodelspec\n",
+    "pip install getmodelspec -U"
    ]
   },
   {
@@ -48,10 +99,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c7b1a8b8",
+   "metadata": {},
+   "source": [
+    "## "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac01544c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.kill(os.getpid(), 9)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6e1cbb67",
    "metadata": {},
    "source": [
-    "### Package setting"
+    "## Package setting"
    ]
   },
   {
