--- a/quick_guide_lineup.ipynb
+++ b/quick_guide_lineup.ipynb
@@ -13,7 +13,9 @@
   {
    "cell_type": "markdown",
    "id": "52df8a57",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Env setting"
    ]
@@ -21,7 +23,9 @@
   {
    "cell_type": "markdown",
    "id": "70b92d40",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "-  For Coalab setting\n",
     "- Coalab에서 사용할 경우 활성화 하세요 (주석 처리 제거, ctrl+/)"
@@ -30,7 +34,10 @@
   {
    "cell_type": "markdown",
    "id": "30216803",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "### Install Colab selenium & crome driver"
    ]
@@ -39,7 +46,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "9142d357",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# 이 부분은 처음 한번만 실행.\n",
@@ -101,16 +110,31 @@
   {
    "cell_type": "markdown",
    "id": "a21fafa2",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
-    "### Install Package"
+    "### restart Runtime"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86dcd580",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "- `os.kill(os.getpid(), 9)`은 런타임 재시작 입니다. 아래부터 이어서 진행하면 됩니다."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "9e1b74f7",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -119,16 +143,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86dcd580",
-   "metadata": {},
-   "source": [
-    "- `os.kill(os.getpid(), 9)`은 런타임 재시작 입니다. 아래부터 이어서 진행하면 됩니다."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "6e1cbb67",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Package setting"
    ]
@@ -137,7 +155,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "8e611f88",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "import sys\n",
@@ -150,7 +170,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4ac45040",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "sys.path.insert(0,'/usr/lib/chromium-browser/chromedriver') #크롬 드라이버  경로 설정"
@@ -159,7 +181,9 @@
   {
    "cell_type": "markdown",
    "id": "0429c013",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Act"
    ]
@@ -168,7 +192,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "991f097d",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "sonyScraper = GetSONY(envr=\"weak\") #colab 환경이 아니라면 sonyScraper = GetSONY() 으로 변경\n",
@@ -179,7 +205,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1afcf53c",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "dfModels.info()\n",
@@ -189,7 +217,9 @@
   {
    "cell_type": "markdown",
    "id": "1cd68dd3",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- colab에서 파일 받기"
    ]
@@ -198,7 +228,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "62e82f02",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "#colab 환경이 아니라면 비활성화\n",
@@ -210,7 +242,9 @@
   {
    "cell_type": "markdown",
    "id": "f84d923e",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "---"
    ]
