--- a/quick_guide_score.ipynb
+++ b/quick_guide_score.ipynb
@@ -21,7 +21,9 @@
   {
    "cell_type": "markdown",
    "id": "a21fafa2",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Install Package"
    ]
@@ -30,7 +32,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "9e1b74f7",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# 이 부분은 처음 한번만 실행.\n",
@@ -91,6 +95,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1747af81",
+   "metadata": {},
+   "source": [
+    "### restart Runtime"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "86dcd580",
    "metadata": {},
    "source": [
@@ -98,17 +110,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c7b1a8b8",
-   "metadata": {},
-   "source": [
-    "## "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac01544c",
+   "id": "8f128386",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +123,9 @@
   {
    "cell_type": "markdown",
    "id": "6e1cbb67",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Package setting"
    ]
@@ -128,7 +134,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "8e611f88",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -139,7 +147,9 @@
   {
    "cell_type": "markdown",
    "id": "0429c013",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Act"
    ]
@@ -148,7 +158,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "991f097d",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "score = Score()\n",
@@ -167,7 +179,9 @@
   {
    "cell_type": "markdown",
    "id": "1cd68dd3",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- colab에서 파일 받기"
    ]
@@ -176,7 +190,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "62e82f02",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "#colab 환경이 아니라면 비활성화\n",
@@ -187,7 +203,9 @@
   {
    "cell_type": "markdown",
    "id": "f84d923e",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "---"
    ]
