--- a/quick_guide_specifications.ipynb
+++ b/quick_guide_specifications.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e53ba2af",
+   "id": "f296d995",
    "metadata": {},
    "source": [
     "-  For Coalab setting\n",
@@ -29,8 +29,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "708d292e",
-   "metadata": {},
+   "id": "0eb1cb02",
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Install Colab selenium & crome driver"
    ]
@@ -38,8 +40,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f73a008",
-   "metadata": {},
+   "id": "a39ce4d7",
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# 이 부분은 처음 한번만 실행.\n",
@@ -101,16 +105,30 @@
   {
    "cell_type": "markdown",
    "id": "a21fafa2",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "### Install Package"
+    "### restart Runtime"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86dcd580",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "- `os.kill(os.getpid(), 9)`은 런타임 재시작 입니다. 아래부터 이어서 진행하면 됩니다."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "id": "9e1b74f7",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -119,16 +137,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86dcd580",
-   "metadata": {},
-   "source": [
-    "- `os.kill(os.getpid(), 9)`은 런타임 재시작 입니다. 아래부터 이어서 진행하면 됩니다."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "6e1cbb67",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Package setting"
    ]
@@ -137,7 +149,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "8e611f88",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "import sys\n",
