--- a/quick_guide_specifications.ipynb
+++ b/quick_guide_specifications.ipynb
@@ -157,7 +157,7 @@
     "import sys\n",
     "\n",
     "from datetime import date\n",
-    "from getmodelspec import GetSONY"
+    "from getmodelspec import Specifications"
    ]
   },
   {
@@ -175,10 +175,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "specs = Sepcifications()\n",
+    "specs = Specifications()\n",
     "\n",
     "sonyUrl = \"https://www.displayspecifications.com/en/brand/47e6f\"\n",
-    "dictModelSepcs = specs.getSepc(sonyUrl)\n",
+    "dictModelSepcs = specs.getSpec(sonyUrl)\n",
     "\n",
     "\n",
     "dfModelSepcs = pd.DataFrame.from_dict(dictModelSepcs, orient=\"index\")\n",
