--- a/quick_guide_specifications.ipynb
+++ b/quick_guide_specifications.ipynb
@@ -157,6 +157,7 @@
     "import sys\n",
     "\n",
     "from datetime import date\n",
+    "import pandas as pd\n",
     "from getmodelspec import Specifications"
    ]
   },
@@ -178,7 +179,7 @@
     "specs = Specifications()\n",
     "\n",
     "sonyUrl = \"https://www.displayspecifications.com/en/brand/47e6f\"\n",
-    "dictModelSepcs = specs.getSpec(sonyUrl)\n",
+    "dictModelSepcs = specs.getSpec()\n",
     "\n",
     "\n",
     "dfModelSepcs = pd.DataFrame.from_dict(dictModelSepcs, orient=\"index\")\n",
