--- a/quick_guide_score.ipynb
+++ b/quick_guide_score.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1747af81",
+   "id": "7b42c9e8",
    "metadata": {},
    "source": [
     "### restart Runtime"
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f128386",
+   "id": "3a671826",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,9 +147,7 @@
   {
    "cell_type": "markdown",
    "id": "0429c013",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Act"
    ]
@@ -158,14 +156,12 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "991f097d",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "score = Score()\n",
     "\n",
-    "prefix = \"https://www.rtings.com/tv/reviews/sony/\",\n",
+    "prefix = \"https://www.rtings.com/tv/reviews/sony/\"\n",
     "series = \"x85k\"\n",
     "\n",
     "dictModelScore = score.getRthinsScore(prefix=prefix, series=series)\n",
@@ -179,9 +175,7 @@
   {
    "cell_type": "markdown",
    "id": "1cd68dd3",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "- colab에서 파일 받기"
    ]
@@ -190,9 +184,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "62e82f02",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#colab 환경이 아니라면 비활성화\n",
@@ -203,9 +195,7 @@
   {
    "cell_type": "markdown",
    "id": "f84d923e",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "---"
    ]
