--- a/quick_guide_lineup.ipynb
+++ b/quick_guide_lineup.ipynb
@@ -197,7 +197,7 @@
    },
    "outputs": [],
    "source": [
-    "sonyScraper = GetSONY(envr=\"weak\") #colab 환경이 아니라면 sonyScraper = GetSONY() 으로 변경\n",
+    "sonyScraper = GetSONY() #colab 환경이 아니라면 sonyScraper = GetSONY() 으로 변경\n",
     "dfModels = sonyScraper.getModels()"
    ]
   },
