--- a/quick_guide_lineup.ipynb
+++ b/quick_guide_lineup.ipynb
@@ -5,7 +5,7 @@
    "id": "1f063cfb",
    "metadata": {},
    "source": [
-    "# QuickGuide For SONY\n",
+    "# QuickGuide For LineUp\n",
     "\n",
     "[프로젝트 페이지: Research-on-the-TV-market](https://github.com/xikest/Research-on-the-TV-market)"
    ]
@@ -144,9 +144,7 @@
   {
    "cell_type": "markdown",
    "id": "6e1cbb67",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Package setting"
    ]
@@ -155,13 +153,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "8e611f88",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "\n",
+    "import pandas as pd\n",
     "from datetime import date\n",
     "from getmodelspec import GetSONY"
    ]
@@ -170,9 +166,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4ac45040",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sys.path.insert(0,'/usr/lib/chromium-browser/chromedriver') #크롬 드라이버  경로 설정"
@@ -181,9 +175,7 @@
   {
    "cell_type": "markdown",
    "id": "0429c013",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Act"
    ]
@@ -192,34 +184,32 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "991f097d",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "sonyScraper = GetSONY(envr=\"weak\") #colab 환경이 아니라면 sonyScraper = GetSONY() 으로 변경\n",
-    "dfModels = sonyScraper.getModels()"
+    "lineUp = LineUp()\n",
+    "dfModelsJp = lineUp.getSony(src='jp')\n",
+    "dfModelsGlobal = lineUp.getSony(src='global')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1afcf53c",
-   "metadata": {
-    "hidden": true
-   },
+   "id": "a602b606",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "dfModels.info()\n",
-    "dfModels.head(3)"
+    "fileName = f\"sony_TV_series_{date.today().strftime('%Y-%m-%d')}.xlsx\"\n",
+    "# Excel 파일에 데이터프레임을 저장\n",
+    "with pd.ExcelWriter(fileName) as writer:\n",
+    "    dfModelsJp.to_excel(writer, sheet_name='JP', index=True)\n",
+    "    dfModelsGlobal.to_excel(writer, sheet_name='Global', index=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "1cd68dd3",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "- colab에서 파일 받기"
    ]
@@ -228,23 +218,18 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "62e82f02",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#colab 환경이 아니라면 비활성화\n",
     "from google.colab import files\n",
-    "fileName = f\"sony_TV_series_{date.today().strftime('%Y-%m-%d')}.xlsx\"\n",
     "files.download(fileName) # 파일 다운로드"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "f84d923e",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "---"
    ]
