--- a/quick_guide_lineup.ipynb
+++ b/quick_guide_lineup.ipynb
@@ -159,7 +159,7 @@
     "import sys\n",
     "import pandas as pd\n",
     "from datetime import date\n",
-    "from getmodelspec import GetSONY"
+    "from getmodelspec import LineUp"
    ]
   },
   {
