--- a/quick_guide_lineup.ipynb
+++ b/quick_guide_lineup.ipynb
@@ -193,20 +193,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a602b606",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fileName = f\"sony_TV_series_{date.today().strftime('%Y-%m-%d')}.xlsx\"\n",
-    "# Excel 파일에 데이터프레임을 저장\n",
-    "with pd.ExcelWriter(fileName) as writer:\n",
-    "    dfModelsJp.to_excel(writer, sheet_name='JP', index=True)\n",
-    "    dfModelsGlobal.to_excel(writer, sheet_name='Global', index=True)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "1cd68dd3",
    "metadata": {},
@@ -223,6 +209,12 @@
    "source": [
     "#colab 환경이 아니라면 비활성화\n",
     "from google.colab import files\n",
+    "\n",
+    "fileName = f\"sony_TV_series_{date.today().strftime('%Y-%m-%d')}.xlsx\"\n",
+    "# Excel 파일에 데이터프레임을 저장\n",
+    "with pd.ExcelWriter(fileName) as writer:\n",
+    "    dfModelsJp.to_excel(writer, sheet_name='JP', index=True)\n",
+    "    dfModelsGlobal.to_excel(writer, sheet_name='Global', index=True)\n",
     "files.download(fileName) # 파일 다운로드"
    ]
   },
