--- a/quick_guide_lineup.ipynb
+++ b/quick_guide_lineup.ipynb
@@ -13,9 +13,7 @@
   {
    "cell_type": "markdown",
    "id": "52df8a57",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Env setting"
    ]
@@ -23,20 +21,16 @@
   {
    "cell_type": "markdown",
    "id": "70b92d40",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
-    "-  For Coalab setting\n",
-    "- Coalab에서 사용할 경우 활성화 하세요 (주석 처리 제거, ctrl+/)"
+    "-  For Coalab setting (주석 처리, ctrl+/)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "30216803",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### Install Colab selenium & crome driver"
@@ -111,8 +105,7 @@
    "cell_type": "markdown",
    "id": "a21fafa2",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### restart Runtime"
@@ -188,7 +181,16 @@
    "outputs": [],
    "source": [
     "lineUp = LineUp()\n",
-    "dfModelsJp = lineUp.getSony(src='jp')\n",
+    "dfModelsJp = lineUp.getSony(src='jp')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fac1fd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dfModelsGlobal = lineUp.getSony(src='global')"
    ]
   },
@@ -210,12 +212,12 @@
     "#colab 환경이 아니라면 비활성화\n",
     "from google.colab import files\n",
     "\n",
-    "fileName = f\"sony_TV_series_{date.today().strftime('%Y-%m-%d')}.xlsx\"\n",
+    "fileName = f\"LineUp_{date.today().strftime('%Y-%m-%d')}\"\n",
     "# Excel 파일에 데이터프레임을 저장\n",
     "with pd.ExcelWriter(fileName) as writer:\n",
     "    dfModelsJp.to_excel(writer, sheet_name='JP', index=True)\n",
     "    dfModelsGlobal.to_excel(writer, sheet_name='Global', index=True)\n",
-    "files.download(fileName) # 파일 다운로드"
+    "files.download(fileName+\"xlsx\") # 파일 다운로드"
    ]
   },
   {
