--- a/quick_guide_score.ipynb
+++ b/quick_guide_score.ipynb
@@ -13,16 +13,28 @@
   {
    "cell_type": "markdown",
    "id": "52df8a57",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Env setting"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "5f21602e",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "-  For Coalab setting (주석 처리, ctrl+/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a21fafa2",
    "metadata": {
-    "heading_collapsed": true
+    "hidden": true
    },
    "source": [
     "### Install Package"
@@ -96,7 +108,9 @@
   {
    "cell_type": "markdown",
    "id": "7b42c9e8",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### restart Runtime"
    ]
@@ -104,7 +118,9 @@
   {
    "cell_type": "markdown",
    "id": "86dcd580",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- `os.kill(os.getpid(), 9)`은 런타임 재시작 입니다. 아래부터 이어서 진행하면 됩니다."
    ]
@@ -113,7 +129,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3a671826",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -167,9 +185,7 @@
     "dictModelScore = score.getRthinsScore(prefix=prefix, series=series)\n",
     "dfModelScore = pd.DataFrame.from_dict(dictModelScore, orient=\"index\", columns=[\"score\"])\n",
     "dfModelScore = dfModelScore.rename_axis('model').reset_index()\n",
-    "\n",
-    "fileName=f\"{series}_score_{date.today().strftime('%Y-%m-%d')}.xlsx\"\n",
-    "dfModelScore.to_excel(fileName, index=False)# 엑셀 파일로 저장"
+    "\n"
    ]
   },
   {
@@ -189,6 +205,8 @@
    "source": [
     "#colab 환경이 아니라면 비활성화\n",
     "from google.colab import files\n",
+    "fileName=f\"{series}_score_{date.today().strftime('%Y-%m-%d')}.xlsx\"\n",
+    "dfModelScore.to_excel(fileName, index=False)# 엑셀 파일로 저장\n",
     "files.download(fileName) # 파일 다운로드"
    ]
   },
