--- a/quick_guide_lineup.ipynb
+++ b/quick_guide_lineup.ipynb
@@ -152,7 +152,8 @@
     "import sys\n",
     "import pandas as pd\n",
     "from datetime import date\n",
-    "from getmodelspec import LineUp"
+    "from getmodelspec import LineUp\n",
+    "from getmodelspec import dictToexcel"
    ]
   },
   {
@@ -181,17 +182,17 @@
    "outputs": [],
    "source": [
     "lineUp = LineUp()\n",
-    "dfModelsJp = lineUp.getSony(src='jp')"
+    "dictModelsJp = lineUp.getSony(src='jp')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fac1fd6",
+   "id": "9f7fd76f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfModelsGlobal = lineUp.getSony(src='global')"
+    "dictModelsGlobal = lineUp.getSony(src='global')"
    ]
   },
   {
@@ -214,9 +215,9 @@
     "\n",
     "fileName = f\"LineUp_{date.today().strftime('%Y-%m-%d')}\"\n",
     "# Excel 파일에 데이터프레임을 저장\n",
-    "with pd.ExcelWriter(fileName) as writer:\n",
-    "    dfModelsJp.to_excel(writer, sheet_name='JP', index=True)\n",
-    "    dfModelsGlobal.to_excel(writer, sheet_name='Global', index=True)\n",
+    "dictToexcel(dictModelsJp, fileName=fileName ,sheetName=\"Jp\")\n",
+    "dictToexcel(dictModelsGlobal, fileName=fileName ,sheetName=\"Global\")\n",
+    "\n",
     "files.download(fileName+\"xlsx\") # 파일 다운로드"
    ]
   },
