--- a/quick_guide_lineup.ipynb
+++ b/quick_guide_lineup.ipynb
@@ -218,7 +218,7 @@
     "dictToexcel(dictModelsJp, fileName=fileName ,sheetName=\"Jp\")\n",
     "dictToexcel(dictModelsGlobal, fileName=fileName ,sheetName=\"Global\")\n",
     "\n",
-    "files.download(fileName+\"xlsx\") # 파일 다운로드"
+    "files.download(fileName+\".xlsx\") # 파일 다운로드"
    ]
   },
   {
