--- a/quick_guide_lineup.ipynb
+++ b/quick_guide_lineup.ipynb
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "8e611f88",
    "metadata": {},
    "outputs": [],
@@ -152,6 +152,8 @@
     "import sys\n",
     "import pandas as pd\n",
     "from datetime import date\n",
+    "from google.colab import files\n",
+    "\n",
     "from getmodelspec import LineUp\n",
     "from getmodelspec import dictToexcel"
    ]
@@ -210,14 +212,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#colab 환경이 아니라면 비활성화\n",
-    "from google.colab import files\n",
-    "\n",
-    "fileName = f\"LineUp_{date.today().strftime('%Y-%m-%d')}\"\n",
     "# Excel 파일에 데이터프레임을 저장\n",
+    "fileName = f\"LineUpJp_{date.today().strftime('%Y-%m-%d')}\"\n",
     "dictToexcel(dictModelsJp, fileName=fileName ,sheetName=\"Jp\")\n",
+    "files.download(fileName+\".xlsx\") # 파일 다운로드"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "357d02d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fileName = f\"LineUpGlobal_{date.today().strftime('%Y-%m-%d')}\"\n",
     "dictToexcel(dictModelsGlobal, fileName=fileName ,sheetName=\"Global\")\n",
-    "\n",
     "files.download(fileName+\".xlsx\") # 파일 다운로드"
    ]
   },
